main.css
@import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;600&display=swap");

* {
  font-family: Rajdhani, sans-serif;
  margin: 0;
  padding: 0;
  color: yellowgreen;
}

body {
  position: relative;
  min-height: 100vh;
  width: 100%;
  background-color: rgb(34, 0, 66);
}

h1 {
  font-weight: 600;
  font-size: 7rem;
}

h2 {
  font-size: 4rem;
}

h3 {
  font-size: 2rem;
}

p {
  font-size: 1.5rem;
}

.underline {
  border-bottom: 1px solid yellowgreen;
}

.container {
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: end;
  position: absolute;
  margin-right: 1rem;
  top: 0;
  right: 0;
}

.container nav {
  top: 1rem;
  text-align: right;
  min-width: 240px;
}

#nav.fixed {
  position: fixed;
  top: 1rem;
  right: 1rem;
}

.nav-link {
  text-decoration: none;
  display: block;
  font-size: 2rem;
  border: 1px solid yellow;
  padding-right: 0.5rem;
  margin-bottom: 5px;
}

.nav-link:hover {
  color: rgb(34, 0, 66);
  background-color: yellowgreen;
}

.navBtn {
  display: none;
}

.scroll-container {
  scroll-behavior: smooth;
}

section {
  min-height: 100vh;
  max-width: 100%;
  padding: 2rem 4rem;
  padding-right: 320px;
  transition: all 1s ease-out;
  box-sizing: border-box;
}

.row {
  display: flex;
  box-sizing: border-box;
  margin: 1rem 0;
}

.col {
  display: flex;
  flex-direction: column;
  border-right: 1px solid yellowgreen;
  padding: 1rem;
}

.row .col:last-child {
  border-right: none;
}

.about {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.skills li {
  font-size: 1.5rem;
  list-style: none;
}

.skills .title {
  flex: 1;
  align-items: flex-end;
}

.skills .list {
  flex: 3;
  align-items: flex-start;
}

.projects {
  justify-content: space-between;
}

.card {
  min-width: 20%;
  max-width: 20%;
  padding: 1rem;
  border: 1px solid #9acd32;
  text-decoration: none;
  box-sizing: border-box;
}

.project {
  transition: all 0.3s ease;
}

.project:hover {
  transform: translate(-5px, -5px);
  box-shadow: 0px 0px 15px 5px yellowgreen;
}

.project-img {
  box-sizing: border-box;
  max-width: 100%;
}

.project-description {
  font-size: 1rem;
}

.project-tools {
  margin-top: 1rem;
  font-size: 1.5rem;
  text-align: center;
}

.project-link {
  display: flex;
  text-decoration: none;
  justify-content: center;
  font-size: 1.2rem;
  font-weight: 600;
  background-color: rgba(154, 205, 50, 0.7);
  color: rgb(34, 0, 66);
  padding: 0.5rem 1rem;
}

.project-link:hover {
  background-color: yellowgreen;
}

.more-projects {
  display: flex;
  justify-content: center;
  align-items: center;
  border: none;
}

@media (max-width: 400px) {
  section {
    padding: 1rem;
  }

  .container {
    height: auto;
    width: 100%;
    margin: 0;
    flex-direction: column;
    position: fixed;
  }

  .container nav {
    width: 100%;
    height: 0px;
    opacity: 0;
    pointer-events: none;
    transition: all 0.5s ease;
    background-color: rgb(34, 0, 66);
  }

  .container nav a:last-child {
    margin-bottom: 0;
  }

  .navBtn {
    background-color: rgba(0, 128, 128, 0.8);
    padding: 5px 14px;
    border-radius: 0 0 5px 5px;
    display: flex;
  }

  .container nav.active {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    height: 240px;
    opacity: 1;
    pointer-events: all;
  }

  #nav.fixed {
    position: relative;
    top: 0;
    right: 0;
  }

  .nav-link {
    text-align: center;
    margin: 0;
  }

  h1 {
    font-size: 4rem;
  }

  .row {
    flex-direction: column;
  }

  .card {
    max-width: 100%;
    min-width: 100%;
  }
}

